GearsetPOC/force-app/main/default/objects/LiveChat__c/LiveChat__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>LiveChat</label>
</CustomObject>