GearsetPOC/force-app/main/default/objects/LiveChat__c/fields/Chat_Button_for_French_version__c.field-meta.xml
<CustomField>
    <fullName>Chat_Button_for_French_version__c</fullName>
    <label>Chat Button for French version</label>
    <length>18</length>
    <type>Text</type>
</CustomField>