GearsetPOC/force-app/main/default/objects/LiveChat__c/fields/Deployment_Id_for_Live_Chat__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Id_for_Live_Chat__c</fullName>
    <label>Deployment Id for Live Chat</label>
    <length>18</length>
    <type>Text</type>
</CustomField>