GearsetPOC/force-app/main/default/objects/LiveChat__c/fields/Deployment_URL__c.field-meta.xml
<CustomField>
    <fullName>Deployment_URL__c</fullName>
    <description>Fill this from Live Agent Deployment</description>
    <label>Deployment URL</label>
    <type>Url</type>
</CustomField>