GearsetPOC/force-app/main/default/objects/LiveChat__c/fields/Email_For_Issues_Notification__c.field-meta.xml
<CustomField>
    <fullName>Email_For_Issues_Notification__c</fullName>
    <label>Email For Notifications</label>
    <type>Email</type>
</CustomField>