GearsetPOC/force-app/main/default/objects/LiveChat__c/fields/Host_URL__c.field-meta.xml
<CustomField>
    <fullName>Host_URL__c</fullName>
    <label>Host URL</label>
    <type>Url</type>
</CustomField>