GearsetPOC/force-app/main/default/objects/LiveChat__c/fields/List_of_Chat_Buttons__c.field-meta.xml
<CustomField>
    <fullName>List_of_Chat_Buttons__c</fullName>
    <description>A list of chat buttons IDs</description>
    <inlineHelpText>use any delimeters, eg &quot;ID1, ID2 ID3 - ID4&quot;</inlineHelpText>
    <label>List of Chat Buttons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>