GearsetPOC/force-app/main/default/objects/LiveChat__c/fields/Live_Agent_Chat_Url__c.field-meta.xml
<CustomField>
    <fullName>Live_Agent_Chat_Url__c</fullName>
    <description>Get from Live Agent Settings REST API without /rest or from deployment liveagent.init</description>
    <label>Live Agent Chat Url</label>
    <type>Url</type>
</CustomField>