GearsetPOC/force-app/main/default/objects/LiveChat__c/fields/Max_Avdisor_Responce_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Max_Avdisor_Responce_Timeout__c</fullName>
    <label>Max Advisor Response Timeout</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>