GearsetPOC/force-app/main/default/objects/LiveChat__c/fields/SiteUrl__c.field-meta.xml
<CustomField>
    <fullName>SiteUrl__c</fullName>
    <label>SiteUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>