GearsetPOC/force-app/main/default/objects/LiveChat__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <description>The Name of the survey that would be used in the Live Chat PostChat page</description>
    <label>Survey</label>
    <length>100</length>
    <type>Text</type>
</CustomField>